<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>AquaticCratesTesting</artifactId>
        <groupId>cz.larkyy</groupId>
        <version>2.5.14</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>plugin-spigot</artifactId>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>AquaticCrates-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <!-- Replace this with your package! -->
                            <shadedPattern>cz.larkyy.aquaticcrates.bstats</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>jitpack-repo</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>nexus</id>
            <name>Lumine Public</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_18_R2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_19_R2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_17_R1</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_16_R3</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>v1_19_4</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_20_R2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_20_2</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy.aquaticcrates.nms</groupId>
            <artifactId>NMS_v1_21</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v_1_20_4</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_20_5</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>api</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>gg.aquatic.aquaticseries</groupId>
            <artifactId>aquatic-lib</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.LoneDev6</groupId>
            <artifactId>api-itemsadder</artifactId>
            <version>3.2.3c</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.arcaniax</groupId>
            <artifactId>HeadDatabase-API</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.0.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>xyz.larkyy</groupId>
            <artifactId>ItemLibrary</artifactId>
            <version>0.0.13</version>
            <exclusions>
                <exclusion>
                    <groupId>xyz.larkyy</groupId>
                    <artifactId>ColorUtils</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_19_R3</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>MEG4Hook</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>MEG3Hook</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>cz.larkyy</groupId>
            <artifactId>NMS_v1_20_R1</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>